change numberpad layout to be like a calculator

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <section class="section numberpad">
                 <div class="columns is-mobile is-multiline">
-                    <div class="column is-one-third" v-for="num in 9">
+                    <div class="column is-one-third" v-for="num in numberpad">
                         <button type="button"
                             class="button is-large is-fullwidth is-success"
                             @click="setHoleScore(num)"
