larger reset button

--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@
                         >{{ num }}</button>
                     </div>
                 </div>
-            </section>
 
-            <section class="section">
-                <button type="button" class="button is-warning is-fullwidth" @click="clearScores">Reset</button>
+                <button type="button" class="button is-warning is-fullwidth reset" @click="clearScores">Reset</button>
             </section>
         </div>
 
