--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@
             <section class="hero is-info is-bold">
                 <div class="hero-body">
                     <div class="container">
-                        <h1 class="title is-4">
-                            Golf is Hard. So is Math.
-                        </h1>
-                        <h2 class="subtitle is-6">
-                            Simple + quick golf scorecard calculator.
-                        </h2>
+                        <h1 class="title is-4">Golf is Hard. So is Math.</h1>
+                        <h2 class="subtitle is-6">Simple + quick golf scorecard calculator.</h2>
                     </div>
                 </div>
             </section>
@@ -30,23 +26,23 @@
                 <table class="table is-fullwidth is-striped is-bordered is-narrow">
                     <tbody>
                         <tr>
-                            <th v-for="(score, hole) in holesFront" v-bind:class="{ 'holeHasFocus' : holeWithFocus == hole }" @click="holeWithFocus = hole">{{ hole }}</th>
+                            <th v-for="(score, hole) in holesFront" :class="{ 'holeHasFocus' : holeWithFocus == hole }" @click="holeWithFocus = hole">{{ hole }}</th>
                             <th>Out</th>
                             <td></td>
                         </tr>
                         <tr>
-                            <td v-for="(score, hole) in holesFront" v-bind:class="{ 'holeHasFocus' : holeWithFocus == hole }" @click="holeWithFocus = hole">{{ score }}</td>
+                            <td v-for="(score, hole) in holesFront" :class="{ 'holeHasFocus' : holeWithFocus == hole }" @click="holeWithFocus = hole">{{ score }}</td>
                             <th>{{ scoreFront }}</th>
                             <td></td>
                         </tr>
 
                         <tr>
-                            <th v-for="(score, hole) in holesBack" v-bind:class="{ 'holeHasFocus' : holeWithFocus == hole }" @click="holeWithFocus = hole">{{ hole }}</th>
+                            <th v-for="(score, hole) in holesBack" :class="{ 'holeHasFocus' : holeWithFocus == hole }" @click="holeWithFocus = hole">{{ hole }}</th>
                             <th>In</th>
                             <th>Total</th>
                         </tr>
                         <tr>
-                            <td v-for="(score, hole) in holesBack" v-bind:class="{ 'holeHasFocus' : holeWithFocus == hole }" @click="holeWithFocus = hole">{{ score }}</td>
+                            <td v-for="(score, hole) in holesBack" :class="{ 'holeHasFocus' : holeWithFocus == hole }" @click="holeWithFocus = hole">{{ score }}</td>
                             <th>{{ scoreBack }}</th>
                             <th>{{ scoreTotal }}</th>
                         </tr>
