add container class

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
             </section>
 
-            <section class="section scorecard">
+            <section class="section container scorecard">
                 <table class="table is-fullwidth is-striped is-bordered is-narrow">
                     <tbody>
                         <tr>
@@ -50,7 +50,7 @@
                 </table>
             </section>
 
-            <section class="section numberpad">
+            <section class="section container numberpad">
                 <div class="columns is-mobile is-multiline">
                     <div class="column is-one-third" v-for="num in numberpad">
                         <button type="button"
