--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <table class="table is-fullwidth is-striped is-bordered is-narrow">
                     <tbody>
                         <tr>
-                            <th v-for="(score, hole) in holesFront" :class="{ 'holeHasFocus' : holeWithFocus == hole }" @click="holeWithFocus = hole">{{ hole }}</th>
+                            <th v-for="(score, hole) in holesFront" :class="{ 'holeHasFocus' : holeWithFocus == hole }" @click="holeWithFocus = hole">{{ hole + 1 }}</th>
                             <th>Out</th>
                             <td></td>
                         </tr>
@@ -37,12 +37,12 @@
                         </tr>
 
                         <tr>
-                            <th v-for="(score, hole) in holesBack" :class="{ 'holeHasFocus' : holeWithFocus == hole }" @click="holeWithFocus = hole">{{ hole }}</th>
+                            <th v-for="(score, hole) in holesBack" :class="{ 'holeHasFocus' : holeWithFocus == hole + 9 }" @click="holeWithFocus = hole + 9">{{ hole + 10 }}</th>
                             <th>In</th>
                             <th>Total</th>
                         </tr>
                         <tr>
-                            <td v-for="(score, hole) in holesBack" :class="{ 'holeHasFocus' : holeWithFocus == hole }" @click="holeWithFocus = hole">{{ score }}</td>
+                            <td v-for="(score, hole) in holesBack" :class="{ 'holeHasFocus' : holeWithFocus == hole + 9 }" @click="holeWithFocus = hole + 9">{{ score }}</td>
                             <th>{{ scoreBack }}</th>
                             <th>{{ scoreTotal }}</th>
                         </tr>
@@ -56,7 +56,7 @@
                         <button type="button"
                             class="button is-large is-fullwidth is-success"
                             @click="setHoleScore(num)"
-                            :disabled="holeWithFocus > 18"
+                            :disabled="holeWithFocus > 17"
                         >{{ num }}</button>
                     </div>
                 </div>
@@ -66,7 +66,6 @@
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.10/lodash.min.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
